fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ html {
 	height: 100vh;
 	padding: 0;
 	font-family: Roboto, sans-serif;
+	overflow-x: hidden;
 }
 .link-reset {
 	display: inline-block;
